--- a/templates/map_compiler.html
+++ b/templates/map_compiler.html
@@ -3,7 +3,7 @@
         <title>Поиск по карте</title>
     </HEAD>
     <BODY>
-        <form name="test" method="post" action="input1.php">
+        <form name="butt" action="review">
         <p><b>Вводите свой город(или страну!) сюда ↓</b><br>
         <input type="text" size="40">
     </BODY>
