Еще малость поправил

--- a/templates/review.html
+++ b/templates/review.html
@@ -15,7 +15,7 @@
             <option value="5">5</option>
         </select></p>
         <form name="review" method="post" action="gratitude">
-        <p><b>Краткое комментарий</b><br>
+        <p><b>Краткий комментарий</b><br>
         <input type="text" size="35">
         <p>Комментарий<br>
             <textarea name="comment" cols="40" rows="3"></textarea></p>
