--- a/templates/map_compiler.html
+++ b/templates/map_compiler.html
@@ -9,7 +9,7 @@
     </p>
     <p>
         {% if flag %}
-            <img src="../static/img/map.png" alt="Что-то пошло не так">
+            <img src="/static/img/map.png">
         {% endif %}
     </p>
 </form>
