--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -4,8 +4,9 @@
 		<h2> На этом сайте вы можете увидеть любой город или страну на карте!</h2>
 	</HEAD>
 	<BODY>
-		<form action="map_compiler">
-			<button>Перейти к карте</button>
+		<form action="{{redirect_url}}">
+            {{form.map_redirect(class="btn btn_primary")}}<br>
+			<br>{{form.comment_redirect(class="btn btn_primary")}}
 		</form>
 	</BODY>
 </HTML>
