--- a/templates/review.html
+++ b/templates/review.html
@@ -10,6 +10,7 @@
             <p> {{form.short_comment.label}} <br>
                 {{form.short_comment}} <br>
                 {{form.about(class="text_area_field")}} </p>
+            <p> {{form.submit}}</p>
         </form>
     </BODY>
 </HTML>
