--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -1,13 +1,28 @@
 <HTML>
 	<HEAD>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			  crossorigin="anonymous">
+		<link rel="stylesheet" href="../../static/css/style.css">
 		<title>{{title}}</title>
-		<h2> На этом сайте вы можете увидеть любой город или страну на карте!</h2>
+		<h2 class="offset"> На этом сайте вы можете увидеть любой город или страну на карте!</h2>
+		<h3 class="offset-rate"> Наш рейтинг {{median}}</h3>
 	</HEAD>
 	<BODY>
 		<form action="" method="post">
-			{{form.hidden_tag()}}
-            {{form.map_redirect}}<br><br>
-			{{form.comment_redirect}}
+			{{form.hidden_tag()}}<br>
+            <p class="offset">{{form.map_redirect}}  {{form.comment_redirect}}</p>
 		</form>
+		{% for item in comments %}
+	    <div class="col-md6 border rounded">
+			<h3 class="comment-offset">{{item.comment_top}}</h3>
+			<div class="comment-offset">
+				{{item.comment_bottom}}
+			</div> <br>
+			<div class="comment-offset">
+				Рейтинг - {{item.rating}}/5    Дата Написания - {{item.post_date}}
+			</div>
+		</div>
+	    {% endfor %}
 	</BODY>
 </HTML>
