--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,27 @@
 <HTML>
     <HEAD>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			  crossorigin="anonymous">
+		<link rel="stylesheet" href="../../static/css/style.css">
         <title>{{title}}</title>
     </HEAD>
-    <BODY>
+<BODY>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="#">Наше приложение</a>
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+            {% else %}
+                <p>
+                    <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                    <a class="btn btn-success" href="/login">Войти</a>
+                </p>
+            {% endif %}
+        </nav>
+    </header>
     <main role="main" class="container">
     {% block content %}{% endblock %}
      </main>
-    </BODY>
+</BODY>
 </HTML>
